--- a/pdrApp/app/src/main/AndroidManifest.xml
+++ b/pdrApp/app/src/main/AndroidManifest.xml
@@ -21,11 +21,17 @@
         <activity android:name=".TestLevels"
             android:screenOrientation="portrait">
             <intent-filter>
-
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".Info"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
     </application>
 
 </manifest>
